# mobrob

./: .gitignore  instructions.md
src/ariaNode/: CMakeLists.txt
src/ariaNode/src/: ariaNode.cpp
src/p3at/: CMakeLists.txt  Dockerfile  ekf.yaml  instructions.txt  nav2_params.yaml  package.xml  slam_params.yaml
src/p3at/config/: teleop.yaml
src/p3at/launch/: gamepad.launch.py  sdf.launch.py
src/p3at/maps/: my_map.pgm  my_map.yaml
src/p3at/robots/: pioneer.urdf
src/p3at/rviz/: pioneer.rviz
src/p3at/src/: gamepad_controller.py  waypoint_controller.py
src/p3at/worlds/: basic_urdf.sdf
src/p3at_robot/: .gitignore  CMakeLists.txt  Dockerfile  GPS_NAVIGATION_EXPLAINED.md  INSTRUCTIONS.md  OAK_CAMERA_DEBUG.md  PROJECT_OVERVIEW.md  SETUP_FROM_SCRATCH.md  package.xml
src/p3at_robot/.claude/: settings.json
src/p3at_robot/config/: ekf.yaml  imu_calibration.yaml  nav2_params.yaml  slam_params.yaml
src/p3at_robot/launch/: camera.launch.py  gamepad.launch.py  lidar_test.launch.py  mapping.launch.py  oak_depth_test.launch.py
src/p3at_robot/src/: ariaNode.cpp  capture_rgbd.py  cone_detection.py  gamepad_controller.py  gps_waypoint_navigator.py  imu_calibrate.py  mag_calibrate.py  nav2_waypoints.py  oak_camera.py  oak_camera.py.backup  object_detector.py  phidget_imu.py  test_oak_depth.py  test_oak_device.py  test_spatial_detection.py  waypoint_camera.py  waypoint_scanner.py
